--- a/index.html
+++ b/index.html
@@ -1,172 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>8-Week Upper Body Workout</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>8-Week Upper Body Workout Plan</title>
 
-<link rel="manifest" href="manifest.json">
-
-<style>
-body {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  background: #f5f5f5;
-  margin: 0;
-  padding: 14px;
-}
-
-h1, h2 {
-  text-align: center;
-}
-
-.container {
-  max-width: 900px;
-  margin: auto;
-}
-
-.week-toggle {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 16px;
-}
-
-button {
-  padding: 8px 14px;
-  border: none;
-  border-radius: 6px;
-  background: #222;
-  color: white;
-}
-
-button.active {
-  background: #007aff;
-}
-
-.day {
-  background: white;
-  border-radius: 10px;
-  padding: 12px;
-  margin-bottom: 16px;
-}
-
-.exercise {
-  display: grid;
-  grid-template-columns: 1.2fr 50px 50px 60px 30px;
-  gap: 6px;
-  align-items: center;
-  padding: 6px 0;
-  border-bottom: 1px solid #eee;
-}
-
-.exercise:last-child {
-  border-bottom: none;
-}
-
-.exercise input[type="number"] {
-  width: 55px;
-}
-
-.small {
-  font-size: 13px;
-  color: #555;
-}
-</style>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 16px;
+    }
+    h1, h2 {
+      text-align: center;
+    }
+    .day {
+      background: white;
+      border-radius: 10px;
+      padding: 16px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .exercise {
+      margin-bottom: 12px;
+    }
+    label {
+      font-weight: 600;
+    }
+    .sets {
+      display: flex;
+      gap: 8px;
+      margin: 6px 0;
+      flex-wrap: wrap;
+    }
+    .sets input[type="checkbox"] {
+      transform: scale(1.2);
+    }
+    input[type="number"] {
+      width: 70px;
+      padding: 4px;
+    }
+  </style>
 </head>
 
 <body>
-<div class="container">
+  <h1>8-Week Upper Body Workout Plan</h1>
+  <p style="text-align:center;">Check sets & track weight — auto-saves</p>
 
-<h1>8-Week Upper Body Workout</h1>
-<h2 id="phaseTitle"></h2>
+  <!-- DAY 1 -->
+  <div class="day">
+    <h2>Day 1 – Push (Chest / Shoulders)</h2>
 
-<div class="week-toggle">
-  <button id="btn1" onclick="loadPhase(1)">Weeks 1–4</button>
-  <button id="btn2" onclick="loadPhase(2)">Weeks 5–8</button>
-</div>
+    <div class="exercise">
+      <label>Barbell Bench Press – 5x5</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d1-bench-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
 
-<div id="workouts"></div>
+    <div class="exercise">
+      <label>Incline Dumbbell Press – 4x8–10</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d1-incline-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
 
-</div>
+    <div class="exercise">
+      <label>Overhead Press – 4x6–8</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d1-ohp-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
+  </div>
+
+  <!-- DAY 2 -->
+  <div class="day">
+    <h2>Day 2 – Pull (Back Strength)</h2>
+
+    <div class="exercise">
+      <label>Weighted Pull-Ups – 5xAMRAP</label>
+      <div class="sets">
+        <input type="number" placeholder="+lbs" data-key="d2-pullup-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
+
+    <div class="exercise">
+      <label>Barbell Row – 4x6–8</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d2-row-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
+
+    <div class="exercise">
+      <label>Lat Pulldown – 4x10–12</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d2-lat-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
+  </div>
+
+  <!-- DAY 3 -->
+  <div class="day">
+    <h2>Day 3 – Push (Hypertrophy)</h2>
+
+    <div class="exercise">
+      <label>Machine Chest Press – 4x12</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d3-chest-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
+
+    <div class="exercise">
+      <label>Lateral Raises – 5x15</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d3-lateral-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
+  </div>
+
+  <!-- DAY 4 -->
+  <div class="day">
+    <h2>Day 4 – Pull (Volume)</h2>
+
+    <div class="exercise">
+      <label>Seated Cable Row – 4x12</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d4-row-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
+
+    <div class="exercise">
+      <label>Face Pulls – 4x15</label>
+      <div class="sets">
+        <input type="number" placeholder="lbs" data-key="d4-face-w">
+        <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
+      </div>
+    </div>
+  </div>
 
 <script>
-const workouts = {
-  1: {
-    title: "Weeks 1–4: Strength & Volume",
-    days: {
-      "Day 1 – Push (Heavy)": [
-        ["Barbell Bench Press", "5", "5"],
-        ["Incline DB Press", "4", "8–10"],
-        ["Standing OHP", "4", "6–8"],
-        ["Cable Lateral Raise", "3", "15"],
-        ["Weighted Dips", "3", "8–10"]
-      ],
-      "Day 2 – Pull (Heavy)": [
-        ["Weighted Pull-ups", "5", "5–6"],
-        ["Barbell Row", "4", "6–8"],
-        ["Seated Cable Row", "3", "10–12"],
-        ["Face Pulls", "3", "15"],
-        ["EZ-Bar Curl", "3", "10"]
-      ]
+  document.querySelectorAll("input").forEach(input => {
+    const key = input.dataset.key || input.outerHTML;
+    if (localStorage[key]) {
+      if (input.type === "checkbox") input.checked = localStorage[key] === "true";
+      if (input.type === "number") input.value = localStorage[key];
     }
-  },
-  2: {
-    title: "Weeks 5–8: Overload & Density",
-    days: {
-      "Day 1 – Push (Max Effort)": [
-        ["Bench Press (Clusters)", "6", "4"],
-        ["Incline DB Press (Drop)", "3", "8+8"],
-        ["Seated DB Press", "4", "10"],
-        ["Cable Lateral Raise", "4", "15"]
-      ],
-      "Day 2 – Pull (Max Effort)": [
-        ["Weighted Pull-ups", "5", "AMRAP"],
-        ["Pendlay Row", "4", "6"],
-        ["Straight-arm Pulldown", "3", "15"],
-        ["EZ-Bar Curl Drop", "3", "10+8+6"]
-      ]
-    }
-  }
-};
-
-function loadPhase(phase) {
-  document.getElementById("phaseTitle").innerText = workouts[phase].title;
-  document.getElementById("btn1").classList.remove("active");
-  document.getElementById("btn2").classList.remove("active");
-  document.getElementById(`btn${phase}`).classList.add("active");
-
-  const container = document.getElementById("workouts");
-  container.innerHTML = "";
-
-  Object.entries(workouts[phase].days).forEach(([day, exercises]) => {
-    const dayDiv = document.createElement("div");
-    dayDiv.className = "day";
-    dayDiv.innerHTML = `<h3>${day}</h3>`;
-
-    exercises.forEach((ex, i) => {
-      const baseKey = `${phase}-${day}-${i}`;
-      const checked = localStorage.getItem(baseKey + "-done") === "true";
-      const weight = localStorage.getItem(baseKey + "-weight") || "";
-
-      dayDiv.innerHTML += `
-        <div class="exercise">
-          <div>${ex[0]}</div>
-          <div class="small">${ex[1]}</div>
-          <div class="small">${ex[2]}</div>
-          <input type="number" placeholder="lbs"
-            value="${weight}"
-            onchange="localStorage.setItem('${baseKey}-weight', this.value)">
-          <input type="checkbox" ${checked ? "checked" : ""}
-            onchange="localStorage.setItem('${baseKey}-done', this.checked)">
-        </div>
-      `;
+    input.addEventListener("change", () => {
+      localStorage[key] = input.type === "checkbox" ? input.checked : input.value;
     });
-
-    container.appendChild(dayDiv);
   });
-}
-
-loadPhase(1);
 </script>
+
 </body>
 </html>
